# complaw-deeptech

./: .gitignore  README.md  tomerge0_README.md
201710/: abstractions.md
L4/: .gitignore  CONCLUSIONS about time triggers.md  new_L4_architecture.md  s-expressions language grammar.txt
L4/L4-LSM-Formal-Semantics-LaTeX/: .gitignore  L4-LSM-semantics_packages.sty
L4/_clean_me/: Legalese : SG.Corporation
L4/docs-out-of-date/: .gitignore  L4 design decisions.md  out-of-date_LSM_tutorial.md
L4/examples_pseudocode/: README.md
L4/miniL4/: README.md
L4/out_deprecated/: monster_burger.dot
L4/pyL4/: .gitignore  L4-syntax.sublime-syntax  L4-syntax.tmPreferences  README.md  mypy.ini  runme_before_commit.py
L4/scalaL4/: .gitignore  README.md  build.sbt
blockchain/viper_examples/: ballot2.v.py  ballot2_any_order_no_cycle_breaking.v.py  ballot2_any_order_with_cycle_breaking.v.py  ballot2_with_cycle_breaking.v.py
companyDelta/: README.md  companyDelta.cabal  stack.yaml
companyDelta/app/: Main.hs
companyDelta/examples/: after.json  before.json
companyDelta/examples/case1/: 01-addbob-after.json  01-addbob-before.json  02-change-address-after.json  02-change-address-before.json
companyDelta/src/: BusinessLogic.hs  CDiff.hs  Company.hs
doc/: chapter-201707.org  generations.org  language.org  mattereum.org
fol/: monster_burger_fol.md
here-be-dragons/201710/: abstractions.md
here-be-dragons/KISS_SAFE/: KISS_SAFE.md  SAFE_Primer.rtf
here-be-dragons/demo_isomorphism/: readme.md
here-be-dragons/doc/: README.org
here-be-dragons/fol/: monster_burger_fol.md  monster_burger_fol_with_restaurant_obligations.md  nda.md
here-be-dragons/lazy-formalization/: SAFE-lazy-formalization.txt
here-be-dragons/npm/: npm-deps-1.1.0.tgz  npm-deps-1.1.2.tgz
here-be-dragons/sandbox1/: leiden.hs
here-be-dragons/sandbox4/: L4v1.hs  main.l4  mydeal.hs
here-be-dragons/sandbox5-rounds/: berkman-20161116.hs  formalization.org
here-be-dragons/sandbox5-rounds/dilution.hsproj/: Dilution.hs  Lude.hs  dilution.cabal  streamingfolds.hs
here-be-dragons/sandbox5-rounds/dilution.hsproj/dilution.hsproj/: Lude.hs
here-be-dragons/sct2/: monster burger pools fucked.bpmn  monster burger.bpmn
here-be-dragons/tmforum/: CFC-Master-TMFL-2018 1H - Blockchain Unleashed 20171226.docx
language-independent/LegaleseResearchReportApril2018/: LegaleseResearchReportApril2018.tex  LegaleseResearchReportApril2018_environments.sty
learn-haskell/gauntlet173/: goboard.hs
learn-haskell/peano/: Peano.hs
learn-jsonschema/: README.md  percentage-schema.json  percentage-test.json
learn-prolog/: marriage.pl
linear_state_machine_language/: .gitignore  LSM2_tutorial.md  LSMEventState.py  LSMStatements.py  LSMTop.py  LSM_tutorial.md  README.md  compileLSM.py  constants_and_defined_types.py  execLSM.py  mypy.ini  out-of-date_LSM_tutorial.md  parse_sexpr.py  state_diagram_generation.py  util.py  util_constants_types.py
linear_state_machine_language/docs-out-of-date/: L4 design decisions.md  (+1 more)
marketecture-2018-05/: l4.dot  marketecture.indd
miniL4/: README.md
nix/: README.org  config.nix  default.nix  poets.cabal
npm/: npm-deps-1.0.0.tgz  npm-deps-1.1.0.tgz  npm-deps-1.1.1.tgz  npm-deps-1.1.2.tgz  npm-deps-1.2.0.tgz
sandbox-gf1/: potatoes.hs  potatoes.txt
sandbox1/: Legalese.hs  burger.hs  kata.hs  leiden.hs  leiden.run
sandbox4/: L4v1.hs  mydeal.hs
sandbox5-rounds/: SuperSimpleNote.csl  SuperSimpleNote.l4  SuperSimpleNote.pce  berkman-20161116.hs  berkman-20161117.hs  eu50.txt  readme.org
sandbox5-rounds/fundraising.hsproj/: Contract.hs  Fundraising.hs  Money.hs  NaturalLanguage.hs  ProjectValuation.hs  SGConstitution.hs  Security.hs  _Fundraising.hsplay  fundraising.cabal
sandbox6/l4/: README.org  l4.cabal
sandbox6/l4/app/: Interpret.hs
sandbox6/l4/examples/: burger1.l4
sandbox6/l4/src/: Interpreter.hs
sct2/: README.org  monster burger pools.bpmn
(+875 files in other folders)
