name:                companyDelta
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/companyDelta#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Company
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-diff
  default-language:    Haskell2010

executable companyDelta-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , companyDelta
                     , optparse-applicative
                     , aeson
                     , bytestring
  default-language:    Haskell2010

test-suite companyDelta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , companyDelta
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/companyDelta
