name: fundraising
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable fundraising
  main-is: Fundraising.hs
  buildable: True
  build-depends:
      base -any,
      iso3166-country-codes -any,
      currency -any,
      containers -any,
      split -any,
      time -any
  other-modules:
      NaturalLanguage
      Money
      Security
      ProjectValuation
