name:                l4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/legalese/legalese-compiler/sandbox6/l4
license:             BSD3
license-file:        LICENSE
author:              Meng Weng Wong
maintainer:          mengwong@legalese.com
copyright:           2017 Meng Weng Wong
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter LexL ParL SkelL PrintL AbsL LayoutL ErrM
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010
  -- in the future this will become build-tools-depends
  -- and a custom Setup.hs preprocessor
  -- will specify the running of bnfc --haskell l4.bnfc

executable l4-exe
  hs-source-dirs:      app
  main-is:             Interpret.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , l4
  default-language:    Haskell2010

test-suite l4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , l4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/legalese/legalese-compiler/
