name: dilution
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    dilution.hsproj
x-ghc-framework-version: 7.10.3-5.18-1
x-last-ide-version: HfM1.3.0
Executable dilution
  main-is: Dilution.hs
  buildable: True
  build-depends:
      base -any,
      time -any
